# V-Viewer

./: gradlew  local.properties  settings.gradle
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_native_app_glue.h  animations.cpp  main.cpp  native_app_glue.c  renderer.cpp  theme.cpp  wayland_client.cpp  wayland_client.h  window_manager.cpp
app/src/main/cpp/shaders/: blur.glsl  neon.glsl  shadow.glsl
app/src/main/java/com/vviewer/: ErrorHandler.java  MainActivity.java  SettingsActivity.java  TerminalActivity.java
app/src/main/jniLibs/arm64-v8a/: libexpat.so.1
app/src/main/res/drawable/: splash_background.xml
app/src/main/res/layout/: settings.xml  splash.xml  terminal.xml
app/src/main/res/values/: styles.xml
